# django-cleanup

./: .gitignore  .isort.cfg  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README.markdown  README.rst  pyproject.toml  pytest.ini  runtests.py  setup.py  tox.ini
.github/workflows/: lockThreads.yml  main.yml
django_cleanup/: __init__.py  apps.py  cache.py  cleanup.py  compatibility.py  handlers.py  middleware.py  models.py  signals.py
django_cleanup/testapp/: models.py  requirements.txt  settings.py  storage.py  test_all.py  test_integration.py  testing_helpers.py  tests.py
django_cleanup/testapp/models/: __init__.py  app.py  integration.py
src/django_cleanup/: __init__.py  apps.py  cache.py  cleanup.py  handlers.py  signals.py
test/: conftest.py  requirements.txt  settings.py  test_all.py  test_integration.py  testing_helpers.py
test/models/: app.py  integration.py
test/pytest_plugin/: __init__.py
tests/: models.py  settings.py  test_middleware.py  test_models.py
