[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name='django-cleanup'
authors = [
    {name = "Ilya Shalyapin", email = "ishalyapin@gmail.com"}
]
description = "Deletes old files."
readme = "README.rst"
keywords = ["django"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Utilities'
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "django_cleanup.__version__"}

[project.urls]
Homepage = "https://github.com/un1t/django-cleanup"
Changelog = "https://github.com/un1t/django-cleanup/blob/master/CHANGELOG.md"
